[distributed execution][running as cli]